@@ -37,6 +37,7 @@ import com.baomidou.mybatisplus.core.toolkit.Wrappers;
 import com.baomidou.mybatisplus.extension.plugins.pagination.Page;
 import com.baomidou.mybatisplus.extension.service.impl.ServiceImpl;
 import com.shengyu.module.system.dal.mysql.flow.FlowlongMapper;
+import com.shengyu.module.system.dal.mysql.flow.FlwProcessActorMapper;
 import com.shengyu.module.system.dal.mysql.flow.SyFlwHisInstanceMapper;
 import com.shengyu.module.system.dal.mysql.flow.SyFlwProcessMapper;
 import com.shengyu.module.system.enums.ErrorCodeConstants;
@@ -44,6 +45,7 @@ import com.shengyu.module.system.framework.flow.FlowForm;
 import com.shengyu.module.system.framework.flow.FlowHelper;
 import com.shengyu.module.system.service.flow.*;
 import com.shengyu.module.system.service.permission.PermissionService;
+import com.shengyu.module.system.service.user.AdminUserService;
 import java.util.stream.Collectors;
 import org.apache.commons.lang3.StringUtils;
 import org.springframework.stereotype.Service;
@@ -77,8 +79,6 @@ public class FlwProcessServiceImpl extends ServiceImpl<FlwProcessMapper, FlwProc
     @Resource
     private IFlwFormTemplateService flwFormTemplateService;
     @Resource
-    private FlowlongMapper flowlongMapper;
-    @Resource
     private FlowLongEngine flowLongEngine;
     @Resource
     private SyFlwProcessMapper syFlwProcessMapper;
@@ -86,6 +86,10 @@ public class FlwProcessServiceImpl extends ServiceImpl<FlwProcessMapper, FlwProc
     private SyFlwHisInstanceMapper syFlwHisInstanceMapper;
     @Resource
     private PermissionService permissionService;
+    @Resource
+    private FlwProcessActorMapper flwProcessActorMapper;
+    @Resource
+    private AdminUserService adminUserService;
 
     @Override
     public Page<FlwProcess> pageHistory(Page<FlwProcess> page, FlwProcessHistoryDTO dto) {
@@ -113,7 +117,7 @@ public class FlwProcessServiceImpl extends ServiceImpl<FlwProcessMapper, FlwProc
                   .eq(FlwProcessConfigure::getCategoryId, dto.getProcessCategoryId())).stream()
               .map(FlwProcessConfigure::getProcessId).collect(Collectors.toList());
         }
-        return cxkjFlwHisInstanceMapper.selectPageInstance(page, dto, processIdList);
+        return syFlwHisInstanceMapper.selectPageInstance(page, dto, processIdList);
     }
 
     @Override
@@ -131,10 +135,10 @@ public class FlwProcessServiceImpl extends ServiceImpl<FlwProcessMapper, FlwProc
         List<FlwProcessVO> flwProcessVOList;
         if (launch) {
             //查询已启用的主流程
-            flwProcessVOList = cxkjFlwProcessMapper.selectLaunchProcessList();
+            flwProcessVOList = syFlwProcessMapper.selectLaunchProcessList();
         } else {
             //查询所有流程（包括未启用的，不包含历史版本的）
-            flwProcessVOList = cxkjFlwProcessMapper.selectFlwProcessList();
+            flwProcessVOList = syFlwProcessMapper.selectFlwProcessList();
         }
 
         boolean voIsNotEmpty = CollectionUtil.isNotEmpty(flwProcessVOList);
@@ -144,11 +148,7 @@ public class FlwProcessServiceImpl extends ServiceImpl<FlwProcessMapper, FlwProc
                 // 发起流程，过滤不存在角色权限的流程
                 LoginUser userSession = SecurityFrameworkUtils.getLoginUser();
                 // 查询当前用户角色ID集合
-                List<Long> roleIdList = sysBaseAPI.getRoleIdsByUsername(loginUser.getUsername(), unifyAppId)
-                  .stream()
-                  .filter(StringUtils::isNumeric)
-                  .map(Long::valueOf)
-                  .collect(Collectors.toList());
+                List<Long> roleIdList = permissionService.getUserRoleIdListByUserId(userSession.getId()).stream().toList();
                 // 查询当前用户不存在角色权限的流程ID集合
                 List<Long> processIdList = flwProcessActorMapper.selectListByActorIdList(roleIdList)
                   .stream().map(FlwProcessActor::getProcessId).collect(Collectors.toList());
@@ -489,18 +489,11 @@ public class FlwProcessServiceImpl extends ServiceImpl<FlwProcessMapper, FlwProc
     }
 
     private void checkOperateApproval(Long processId) {
-//        LoginUser userSession = SecurityFrameworkUtils.getLoginUser();
-//        if (null == userSession) {
-//            FlwProcessPermission fpp = getFlwProcessPermissionByProcessId(userSession, processId);
-//            if (null != fpp) {
-//                ServiceExceptionUtil.fail(!fpp.allowOperateApproval(), ErrorCodeConstants.FLOW_1_002_029_045);
-//            }
-//        }
-        LoginUser userSession = UserSession.getLoginUser();
+        LoginUser userSession = SecurityFrameworkUtils.getLoginUser();
         if (userSession == null) {
-            ApiAssert.fail(true, "请登录后再操作审批流程");
+            ServiceExceptionUtil.fail(true, "请登录后再操作审批流程");
         }
-        if (!UserSession.isAdmin(userSession.getId())) {
+        if (!adminUserService.hasTenantAdmin(userSession.getId())) {
             List<FlwProcessPermission> fppList = flwProcessPermissionService.getByProcessId(processId);
             //流程本身没有设置管理员，则无需判断
             if (CollUtil.isEmpty(fppList)) {
@@ -510,10 +503,10 @@ public class FlwProcessServiceImpl extends ServiceImpl<FlwProcessMapper, FlwProc
               .filter(t -> Objects.equals(t.getUserId(), userSession.getId())).findFirst()
               .orElse(null);
             if (Objects.isNull(fpp)) {
-                ApiAssert.fail(true, "无权限编辑操作审批流程");
+                ServiceExceptionUtil.fail(true, "无权限编辑操作审批流程");
             }
             if (null != fpp) {
-                ApiAssert.fail(!fpp.allowOperateApproval(), "无权限编辑操作审批流程");
+                ServiceExceptionUtil.fail(!fpp.allowOperateApproval(), "无权限编辑操作审批流程");
             }
         }
     }
